--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="audioFiles">
-    <div class="nowPlayingAudio">Current song playing: <span></span></div>
+    <div class="nowPlayingAudio">Current song playing: <span>no song</span></div>
 </div>
 <div class="videoFiles">
     <div class="nowPlayingVideo">Video playing</div>
