--- a/index.html
+++ b/index.html
@@ -12,26 +12,8 @@
     <div class="nowPlayingAudio">Current song playing: <span>no song</span></div>
 </div>
 <div class="videoFiles">
-    <div class="nowPlayingVideo">Video playing</div>
+    <div class="nowPlayingVideo">Video player</div>
 </div>
-
-<!--<figure class="audio">-->
-<!--    <figcaption>${item}</figcaption>-->
-<!--    <audio> <source src="/audio/${item}"> </audio>-->
-<!--    <br>-->
-<!--    <button class="play-button">play</button>-->
-<!--</figure>-->
-
-
-<!--<figure class="video">-->
-<!--    <figcaption>${item}</figcaption>-->
-<!--    <video> <source src="/video/${item}"> </video>-->
-<!--    <br>-->
-<!--    <button class="play-button">play</button>-->
-<!--</figure>-->
-
-
-
 
 </body>
 </html>
